# ECSDemo

./: CMakeLists.txt  README.md
Demo/: CMakeLists.txt  Demo.cpp  Demo.h
Demo/Common/: ArcheType.cpp  ArcheType.h  Const.h  Entity.cpp  Entity.h  EntityManager.h  EventBus.cpp  EventBus.h  SceneManager.cpp  SceneManager.h  World.cpp  World.h
Demo/Component/: Camera.cpp  Camera.h  Component.cpp  Component.h  ComponentBitMaskDigits.h  ComponentType.h  Gravity.cpp  Gravity.h  InputKey.cpp  InputKey.h  Jump.cpp  Jump.h  MoveState.cpp  MoveState.h  Position.cpp  Position.h  Velocity.cpp  Velocity.h
Demo/Event/: Event.h  InputEvent.cpp  InputEvent.h  JumpEvent.cpp  JumpEvent.h
Demo/Interface/: PoolObject.h
Demo/Lib/: glad.c
Demo/Listener/: AbstractEventListener.cpp  AbstractEventListener.h  EventListener.h  JumpListener.cpp  JumpListener.h  MoveInputListener.cpp  MoveInputListener.h
Demo/Scene/: GameScene.cpp  GameScene.h  MenuScene.cpp  MenuScene.h  Scene.h
Demo/System/: CharacterDrawSystem.cpp  CharacterDrawSystem.h  DrawSystem.cpp  DrawSystem.h  GravityUpdateSystem.cpp  GravityUpdateSystem.h  InputSystem.cpp  InputSystem.h  MoveInputSystem.cpp  MoveInputSystem.h  MoveUpdateSystem.cpp  MoveUpdateSystem.h  System.cpp  System.h  UpdateSystem.cpp  UpdateSystem.h
Demo/Utils/: BitMask.cpp  BitMask.h  PoolHandler.cpp  PoolHandler.h  UUIDHandler.cpp  UUIDHandler.h
lib/include/glad/: glad.h
